Fixes paddingn of episode header on mobile

--- a/assets/scss/post_types/_episode.scss
+++ b/assets/scss/post_types/_episode.scss
@@ -1,6 +1,13 @@
 body.single.single-episode {
     .post-header {
         background: #3EA19B;
+        margin-bottom: 1rem;
+        padding: 2rem 0;
+
+        @include breakpoint(medium) {
+            margin-bottom: 0;
+            padding: 4rem 0;
+        }
 
         img.episode-image {
             border-radius: 50%;
@@ -8,12 +15,16 @@ body.single.single-episode {
 
         .episode-guest-photos {
             display: flex;
-            max-width: 294px;
+            max-width: 147px;
             margin: 0 auto 1rem;
             align-items: center;
 
             img.episode-guest-photo {
                 border-radius: 50%;
+
+                @include breakpoint(medium) {
+                    max-width: 294px;
+                }
             }
         }
     }
